--- a/index.html
+++ b/index.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/e89bb6a673.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Todo</title>
 </head>
+
 <body>
-<header>Gagan's todo list </header>
-<form >
-    <input type="text" class="todo-input">
-    <button class="todo-button" type="submit" > <i class="fas fa-plus-square"></i> </button>
-</form>
+    <header>Gagan's todo list </header>
+    <form>
+        <input type="text" class="todo-input">
+        <button class="todo-button" type="submit"> <i class="fas fa-plus-square"></i> </button>
+        <div class="select">
+            <select name="todos" class="filter-todo">
+               <option value="all">All</option> 
+               <option value="Completed">Completed</option> 
+               <option value="Pending">Pending</option> 
+            </select>
+        </div>
+    </form>
 
-<div class="todo-container">
-    <ul class="todo-list"></ul>
-</div>
+    <div class="todo-container">
+        <ul class="todo-list"></ul>
+    </div>
 
 
 
-<script src="./main.js"></script>    
+    <script src="./main.js"></script>
 </body>
+
 </html>
